# MindCorpViewer-Rust-2.0.0-darkness

./: Cargo.toml  README.md  build.rs  config.json  icon.res
assets/skybox/: skybox.frag
src/: config_json.rs  export.rs  main.rs
src/g3d/: floor.rs  model.rs  skybox.rs
src/gls/: imgui_glfw.rs  imgui_layout.rs  screenshot.rs  texture.rs
src/lol/: anm.rs  skn.rs
